Validate controller input and provide expected response
- validate endpoint input
- set default values if it is missing in the optional fields
- used hateoas for previous and next record link generation
- use service layer in controller layer

Issue-ID: CPS-449
