# src/main/java/org/onap/cps/temporal/controller/rest/model/AnchorDetailsMapper.java
@@ -1,0 +1,39 @@
+/*
+ * ============LICENSE_START=======================================================
+ * Copyright (c) 2021 Bell Canada.
+ * ================================================================================
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *         http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ *
+ * SPDX-License-Identifier: Apache-2.0
+ * ============LICENSE_END=========================================================
+ */
+
+package org.onap.cps.temporal.controller.rest.model;
+
+import java.time.OffsetDateTime;
+import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+import org.onap.cps.temporal.controller.rest.model.AnchorDetails;
+import org.onap.cps.temporal.domain.NetworkData;
+import org.onap.cps.temporal.utils.DateTimeUtility;
+
+@Mapper(componentModel = "spring")
+public interface AnchorDetailsMapper {
+
+    @Mapping(source = "payload", target = "data")
+    AnchorDetails toAnchorHistory(NetworkData networkData);
+
+    default String map(final OffsetDateTime timestamp) {
+        return DateTimeUtility.offsetDateTimeAsString(timestamp);
+    }
+}
